fixed skill fontsize on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -304,7 +304,7 @@ a {
     margin-bottom: 1.5rem !important; }
     @media (max-width: 37.5em) {
       .skill-box-title {
-        font-size: 2rem; } }
+        font-size: 3rem; } }
 
 .section-projects {
   padding: 10rem 0; }
