--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -100,7 +100,7 @@
     font-weight: 300;
     margin-bottom: 1.5rem !important;
     @include respond(phone) {
-      font-size: 2rem;
+      font-size: 3rem;
     }
   }
 
